[gd_scene load_steps=4 format=3 uid="uid://bkun727yd3n5n"]

[ext_resource type="Script" path="res://scenes/game_over/game_over.gd" id="1_73f1g"]
[ext_resource type="LabelSettings" uid="uid://cb2u5o7m8jgyn" path="res://assets/LG_Title.tres" id="1_fek38"]
[ext_resource type="LabelSettings" uid="uid://bslymv1e3rjua" path="res://assets/GN_32_white.tres" id="2_t0je3"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_73f1g")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.395177, 0.357104, 0.920326, 0.482353)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.0
offset_top = -36.5
offset_right = 184.0
offset_bottom = 36.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Game Over"
label_settings = ExtResource("1_fek38")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Score : "
label_settings = ExtResource("2_t0je3")

[node name="HScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "High Score : "
label_settings = ExtResource("2_t0je3")

[node name="ReplayLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
label_settings = ExtResource("2_t0je3")

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
